@@ -1,18 +1,18 @@
 package org.openapitools.codegen.templating.mustache;
 
-import static org.mockito.AdditionalAnswers.returnsFirstArg;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.when;
-
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Map;
-
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.openapitools.codegen.CodegenConfig;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
+
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+
+import static org.mockito.AdditionalAnswers.returnsFirstArg;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 
 public class CamelCaseLambdaTest extends LambdaTest {
 
@@ -48,7 +48,7 @@ public class CamelCaseLambdaTest extends LambdaTest {
         Map<String, Object> ctx = context("camelcase", new CamelCaseAndSanitizeLambda().generator(generator));
 
         when(generator.sanitizeName(anyString())).then(returnsFirstArg());
-        when(generator.reservedWords()).thenReturn(new HashSet<String>(Arrays.asList("reservedWord")));
+        when(generator.reservedWords()).thenReturn(new HashSet<String>(List.of("reservedWord")));
         when(generator.escapeReservedWord("reservedWord")).thenReturn("escapedReservedWord");
 
         // When & Then
