@@ -1,18 +1,18 @@
 package org.openapitools.codegen.templating.mustache;
 
-import static org.mockito.AdditionalAnswers.returnsFirstArg;
-import static org.mockito.ArgumentMatchers.anyString;
-import static org.mockito.Mockito.when;
-
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Map;
-
 import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.openapitools.codegen.CodegenConfig;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.Test;
+
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+
+import static org.mockito.AdditionalAnswers.returnsFirstArg;
+import static org.mockito.ArgumentMatchers.anyString;
+import static org.mockito.Mockito.when;
 
 public class LowercaseLambdaTest extends LambdaTest {
 
@@ -39,7 +39,7 @@ public class LowercaseLambdaTest extends LambdaTest {
         Map<String, Object> ctx = context("lowercase", new LowercaseLambda().generator(generator));
 
         when(generator.sanitizeName(anyString())).then(returnsFirstArg());
-        when(generator.reservedWords()).thenReturn(new HashSet<String>(Arrays.asList("reserved")));
+        when(generator.reservedWords()).thenReturn(new HashSet<String>(List.of("reserved")));
         when(generator.escapeReservedWord("reserved")).thenReturn("escaped-reserved");
 
         // When & Then
